--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ecommerce_nodejs",
   "version": "1.0.0",
   "description": "ecommerce",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon backend/server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server.js",
-    "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/server.js",
+    "start": "nodemon server.js",
+    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server.js",
+    "prod": "SET NODE_ENV=PRODUCTION& nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "hocvu",
@@ -14,7 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
