--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ffs": "^0.1.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.8.2",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
