add login logout

--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV = DEVELOPMENT
 PORT = 3000
 DATABASE_LOCAL = mongodb://localhost:27017/ecommerce_nodejs_mongodb
 
+JWT_SECRET = VUTHEHOC_NODEJS_MONGODB_MONGOOSE_ECOMMERCE_WEBSITE
+JWT_EXPIRES_IN = 90d
+JWT_COOKIE_EXPIRES_IN = 90
