--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "nodemailer": "^6.9.16",
+    "parcel-bundler": "^1.12.5",
     "pug": "^3.0.3",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
