--- a/package.json
+++ b/package.json
@@ -14,21 +14,32 @@
   "author": "hocvu",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.1",
     "ffs": "^0.1.2",
     "fs": "^0.0.1-security",
+    "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.2",
     "nodemailer": "^6.9.16",
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.3",
     "slugify": "^1.6.6",
-    "validator": "^13.12.0"
+    "stripe": "^17.4.0",
+    "uuid": "^11.0.3",
+    "validator": "^13.12.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
