--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.8.2",
@@ -36,6 +37,7 @@
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.3",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "stripe": "^17.4.0",
     "uuid": "^11.0.3",
     "validator": "^13.12.0",
